metacatui/src/main/webapp/css/metacatui.css
/* ... */
    
    #search_btn.btn:hover {
      background-color: #882222;
      color: #FFFFFF;
      
    }
    
    i.glyphicons-icon {
      opacity: .8;
    }

    i.glyphicons-icon.white {
      opacity: 1;
    }
    
/* FEATURES CSS
-------------------------------------------------- */    
    
    #Features {
      position: relative;
      background-color: #899CA6;
      padding-top: 20px;
      color: #FDFDFD;
			min-height: 400px;
    }

    section#Features h4 {
      font-size: 160%;
      font-weight: 300;
    }

    section#Features p {
      font-size: 110%;
      font-weight: 300;
      line-height: 1.75;
      margin-bottom: 30px;
    }
    
    section#Features button {
      background-color: #6C94A4;
      color: #FFFFFF;
      border: none;
      text-shadow: none;
      box-shadow: none;
    }

    section#Features button:hover {
      background-color: #5C7F8C;
    
    } 
    
/* FEATURED DATA CSS
-------------------------------------------------- */    

    #FeaturedData {
      position: relative;
      background-color: #878787;
      color: #FDFDFD;
      /*min-height: 1200px;*/
    }

    #FeaturedData > section {
      border-top: 1px solid #878787;
    }
		
	  #FeaturedData h2 {
	  	font-weight: 300;
      color: #FDFDFD;
      text-decoration: none;
      width: 400px;
	  }
        
    #FeaturedData h2 a {
      color: #FDFDFD;
      text-decoration: none;      
    }

    #FeaturedData .accordion-inner {
      border-top: 0px;
      padding-bottom: 40px;
      margin: 20px 10px 20px 10px;
      background: rgba(0,0,0,0.6);
      color: #FFFFFF;
      border-radius: 6px 6px 6px 6px;
    }
    
    #featured01 {
      position: relative;
      top: 0px;
    }
    
    #featured02 {
      position: relative;
      top: 0px;
    }
    
    #featured03 {
      position: relative;
      top: 0px;
    }
    
    #featured01_info {
      position: absolute;
      top: 40px;
      left: 80px;
      width: 75%;
    }
    
    #featured02_info {
      position: absolute;
      top: 40px;
      left: 60%;
    }
    
    #featured03_info {
      position: absolute;
      top: 40px;
      left: 80px;
      width: 75%;
    }

    #FeaturedData .collapse {
      position: absolute;
      top: 0px;
    }

    #collapse01, #collapse03 {
      position: absolute;
      left: 420px;
      max-width: 600px;
    }
    
    #collapse02 {
      position: absolute;
      left: -600px;
      max-width: 600px;
    }
    
    /* Commenting these out for now. May not need them:
        
    .featured {
      border-radius: 6px 6px 6px 6px;
      margin-right: 20px;
      max-height: 300px;
    }

    #featured_list {
      margin: auto auto auto 20px;
      border-radius: 6px 6px 6px 6px;
    }    
    
    #featured_list > li.nav-header {
      height: 30px;
      color: #9A8D72;
      background-color: #E8E7DA;
      font-size: 18px;
      font-weight: 400;
      padding-top: 15px;
      border-radius: 6px 6px 0px 0px;
    }

    #featured_list > li.active > a {
      background-color: #9A8D72;
      color: #FDFDFD;
      font-size: 18px;
      font-weight: 400;
      float: left;
    }
    
    #featured_list > li > a {
      height: 60px;
      width: 100%;
      padding: 10px 20px 10px 20px;
      color: #9A8D72;
      background-color: #E8E7DA;
      font-size: 18px;
      font-weight: 400;
      float: left;
      padding: 20px 10px 10px 10px;
    }

    #featured_list > li > a > span.citation {
      font-weight: 300;
    }

    #featured_list > li > a:hover {
      background-color: #F3F3F3;
    }
        
    #featured_list > li.active > a:hover {
      background-color: #9A8D72;
    }
    
    #featured_list > li:first-child > a {
      border-radius: 6px 6px 0px 0px;
    }
    
    #featured_list > li:last-child > a {
      border-radius: 0px 0px 6px 6px;
    }
    
    #featured_list .chevron-left {
      float: left;
    }
    */
/* CUSTOMIZE THE ACCORDIAN 
-------------------------------------------------- */

	.accordion-heading a.accordion-toggle {
		display: inline-block; 
	}    
    
/* CUSTOMIZE THE NAVBAR
-------------------------------------------------- */
    
    .center {
      float: none;
      margin: 0 auto;
    }
    
    nav#Navbar {
      position: fixed;
      top: 0px;
      z-index: 200;
      left: 50%;
      width: 960px;
      margin: 0px 0px 0px -480px;
      float: none;      
    }
    
    .navbar {
      position: relative;
      top: 20px;
      border: none;
      z-index: 210;
      height: 55px;    
    }

    .navbar-inner {
      border: none;
      z-index: 220;
    }
    
    .navbar .brand {
      font-size: 48px;
      font-weight: 300;
      font-family: "Lato";
      color: #992222;
      letter-spacing: -3px;
      margin: 7px 5px 7px 5px;
      padding: 10px 40px 10px 0px;
      float: left;
      
    }
  
    .navbar .nav > li > * {
      margin: 7px 5px 7px 5px;
    }

    .navbar .nav > li > a {
      color: #555555;
      font-size: 18px;
      font-family: "Lato";
      font-weight: 400;
      text-transform: uppercase;
    }

    .navbar .nav > li > a:focus,
    .navbar .nav > li > a:hover {
      color: #555555;
      font-weight: 400;
      background-color: #E5E5E5;
      text-decoration: none;
      -webkit-border-radius: 5px;
      -moz-border-radius: 5px;
      border-radius: 5px;
      /*background-color: transparent;*/
    }
    
    .navbar .nav > .active > a,
    .navbar .nav > .active > a:hover,
    .navbar .nav > .active > a:focus {
      color: #555555;
      font-weight: 400;
      text-decoration: none;
      background-color: #E5E5E5;
      -webkit-border-radius: 5px;
      -moz-border-radius: 5px;
      border-radius: 5px;
      -webkit-box-shadow: none; /*inset 0 3px 8px rgba(0, 0, 0, 0.125);*/
         -moz-box-shadow: none; /*inset 0 3px 8px rgba(0, 0, 0, 0.125);*/
              box-shadow: none; /*inset 0 3px 8px rgba(0, 0, 0, 0.125);*/
    }
/* ... */

